Fix deprecated "new Integer(...)" to "Integer.valueOf(...)"